--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -160,6 +160,7 @@ p {
   opacity: 0.8; /* Reduce opacity of the image on hover */
   transition: opacity 0.3s ease; /* Add a smooth transition effect */
 }
+/*Footer*/
 footer a {
   color: white;
   text-decoration: none;
